Change script source from index.js to app.js

--- a/index.html
+++ b/index.html
@@ -162,6 +162,6 @@
       Copied gross price
     </div>
 
-    <script src="index.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
