Refactor button layout in index.html

--- a/index.html
+++ b/index.html
@@ -134,13 +134,23 @@
             </div>
           </div>
 
-          <button
-            id="resetBtn"
-            class="mt-1 inline-flex items-center justify-center rounded-xl bg-slate-900 px-4 py-2 text-sm font-medium text-white hover:bg-slate-800"
-            type="button"
-          >
-            Reset defaults
-          </button>
+          <div class="mt-1 flex flex-col gap-2 sm:flex-row">
+            <button
+              id="resetBtn"
+              class="inline-flex items-center justify-center rounded-xl bg-slate-900 px-4 py-2 text-sm font-medium text-white hover:bg-slate-800"
+              type="button"
+            >
+              Reset defaults
+            </button>
+          
+            <button
+              id="copyBtn"
+              class="inline-flex items-center justify-center rounded-xl bg-emerald-600 px-4 py-2 text-sm font-medium text-white hover:bg-emerald-500"
+              type="button"
+            >
+              Copy RRP gross
+            </button>
+          </div>
         </div>
 
         <p class="mt-4 text-xs text-slate-500">
