--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Margin Calculator</title>
-    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body class="min-h-screen bg-slate-50 text-slate-900">
     <div class="mx-auto max-w-3xl p-6">
-      <h1 class="text-2xl font-semibold tracking-tight">
-        USD → GBP Cost + Margin Calculator
-      </h1>
-      <p class="mt-2 text-sm text-slate-600">
-        Converts cost in USD to GBP, applies freight multiplier, rounds up to 2dp, then calculates prices from margin.
-      </p>
-
       <div class="mt-6 grid gap-4 rounded-2xl bg-white p-5 shadow-sm ring-1 ring-slate-200">
+
         <!-- Inputs -->
         <div class="grid gap-4 md:grid-cols-2">
           <label class="block">
-            <div class="mb-1 text-sm font-medium">Conversion rate (USD → GBP)</div>
+            <div class="mb-1 text-sm font-medium">USD → GBP</div>
             <input
               id="rate"
               type="number"
               step="0.0001"
               value="0.73"
               class="w-full rounded-xl border border-slate-300 bg-white px-3 py-2 outline-none ring-blue-500 focus:ring-2"
-              placeholder="e.g. 0.73"
             />
           </label>
 
@@ -39,7 +32,6 @@
               step="0.01"
               value="1"
               class="w-full rounded-xl border border-slate-300 bg-white px-3 py-2 outline-none ring-blue-500 focus:ring-2"
-              placeholder="e.g. 1"
             />
           </label>
 
@@ -51,9 +43,7 @@
               step="0.01"
               value="1.2"
               class="w-full rounded-xl border border-slate-300 bg-white px-3 py-2 outline-none ring-blue-500 focus:ring-2"
-              placeholder="e.g. 1.2"
             />
-            <div class="mt-1 text-xs text-slate-500">Example: 1.2 = +20%</div>
           </label>
 
           <label class="block">
@@ -64,112 +54,72 @@
               step="0.1"
               min="0"
               max="99"
-              inputmode="decimal"
               value="40"
               class="w-full rounded-xl border border-slate-300 bg-white px-3 py-2 outline-none ring-blue-500 focus:ring-2"
-              placeholder="e.g. 40"
-            />
-          </label>
-
-          <label class="block">
-            <div class="mb-1 text-sm font-medium">VAT (%)</div>
-            <input
-              id="vat"
-              type="number"
-              step="0.1"
-              value="20"
-              class="w-full rounded-xl border border-slate-300 bg-white px-3 py-2 outline-none ring-blue-500 focus:ring-2"
-              placeholder="e.g. 20"
             />
           </label>
         </div>
 
         <!-- Results -->
-        <div class="mt-2 grid gap-3 rounded-xl bg-slate-50 p-4 ring-1 ring-slate-200">
-          <div class="grid gap-3 md:grid-cols-2">
-            <!-- Top left: Rounded net cost -->
-            <div class="rounded-xl bg-white p-4 ring-1 ring-slate-200">
-              <div class="text-xs uppercase tracking-wide text-slate-500">Rounded net cost (GBP)</div>
-              <div id="netCostGBP" class="mt-2 text-2xl font-semibold"></div>
-              <div class="mt-1 text-xs text-slate-500">Always rounds up to 2dp</div>
-            </div>
+        <div class="mt-6 grid gap-4 md:grid-cols-2">
 
-            <!-- Top right: My net price -->
-            <div class="rounded-xl bg-white p-4 ring-1 ring-slate-200">
-              <div class="text-xs uppercase tracking-wide text-slate-500">My net price (GBP)</div>
-              <div id="sellNet" class="mt-2 text-2xl font-semibold"></div>
-              <div class="mt-2 text-sm text-slate-600">
-                Profit: <span id="profit" class="font-semibold"></span>
-              </div>
-              <div class="mt-1 text-sm text-slate-600">
-                Markup: <span id="markup" class="font-semibold"></span>
-              </div>
-            </div>
+          <label class="block">
+            <div class="mb-1 text-sm font-medium">Rounded net cost (GBP)</div>
+            <input id="netCostGBP" readonly
+              class="w-full rounded-xl border border-slate-300 bg-slate-50 px-3 py-2 outline-none" />
+          </label>
 
-            <!-- Bottom left: Actual gross (VAT applied, NOT .95 rounded) -->
-            <div class="rounded-xl bg-white p-4 ring-1 ring-slate-200">
-              <div class="text-xs uppercase tracking-wide text-slate-500">Actual gross price (GBP)</div>
-              <div id="grossRaw" class="mt-2 text-2xl font-semibold"></div>
-              <div class="mt-1 text-xs text-slate-500">Net price + VAT (no .95 rounding)</div>
-            </div>
+          <label class="block">
+            <div class="mb-1 text-sm font-medium">My net price (GBP)</div>
+            <input id="sellNet" readonly
+              class="w-full rounded-xl border border-slate-300 bg-slate-50 px-3 py-2 outline-none" />
+          </label>
 
-            <!-- Bottom right: Final RRP gross (.95 rounded and copied) -->
-            <div class="rounded-xl bg-emerald-50/40 p-4 ring-1 ring-emerald-200">
-              <div class="text-xs uppercase tracking-wide text-slate-500">
-                Final RRP gross price (GBP)
-              </div>
+          <label class="block">
+            <div class="mb-1 text-sm font-medium">Actual gross price (GBP)</div>
+            <input
+              id="grossRaw"
+              type="number"
+              step="0.01"
+              inputmode="decimal"
+              class="w-full rounded-xl border border-slate-300 bg-white px-3 py-2 outline-none ring-blue-500 focus:ring-2"
+            />
+          </label>
 
-              <div
-                id="sellGross"
-                class="mt-2 text-2xl font-semibold text-emerald-600 drop-shadow-sm"
-              ></div>
+          <label class="block">
+            <div class="mb-1 text-sm font-medium">RRP (GBP)</div>
+            <input id="sellGross" readonly
+              class="w-full rounded-xl border border-emerald-300 bg-emerald-50 px-3 py-2 font-semibold text-emerald-700 outline-none" />
+          </label>
 
-              <div class="mt-1 text-sm text-slate-600">
-                Actual profit: <span id="finalProfit" class="font-semibold"></span>
-              </div>
-
-              <div class="mt-1 text-xs text-slate-500">
-                Rounded up to nearest .95 (auto-copied)
-              </div>
-            </div>
-          </div>
-
-          <div class="mt-1 flex flex-col gap-2 sm:flex-row">
-            <button
-              id="resetBtn"
-              class="inline-flex items-center justify-center rounded-xl bg-slate-900 px-4 py-2 text-sm font-medium text-white hover:bg-slate-800"
-              type="button"
-            >
-              Reset defaults
-            </button>
-          
-            <button
-              id="copyBtn"
-              class="inline-flex items-center justify-center rounded-xl bg-emerald-600 px-4 py-2 text-sm font-medium text-white hover:bg-emerald-500"
-              type="button"
-            >
-              Copy RRP gross
-            </button>
-          </div>
+          <label class="block">
+            <div class="mb-1 text-sm font-medium">Actual profit (GBP)</div>
+            <input id="finalProfit" readonly
+              class="w-full rounded-xl border border-slate-300 bg-slate-50 px-3 py-2 outline-none" />
+          </label>
         </div>
 
-        <p class="mt-4 text-xs text-slate-500">
-          Notes: Margin is computed as <span class="font-mono">profit / sellNet</span>. Markup is
-          <span class="font-mono">profit / cost</span>.
-        </p>
-        <pre
-          id="liveMath"
-          class="mt-3 rounded-lg bg-slate-100 p-3 text-xs text-slate-600 font-mono overflow-x-auto"
-        ></pre>
+        <!-- Buttons -->
+        <div class="mt-4 flex flex-col gap-2 sm:flex-row">
+          <button id="resetBtn"
+            class="inline-flex items-center justify-center rounded-xl bg-slate-900 px-4 py-2 text-sm font-medium text-white hover:bg-slate-800"
+            type="button">
+            Reset defaults
+          </button>
+
+          <button id="copyBtn"
+            class="inline-flex items-center justify-center rounded-xl bg-emerald-600 px-4 py-2 text-sm font-medium text-white hover:bg-emerald-500"
+            type="button">
+            Copy RRP gross
+          </button>
+        </div>
+
       </div>
     </div>
 
-    <!-- Toast -->
-    <div
-      id="toast"
+    <div id="toast"
       class="pointer-events-none fixed bottom-4 right-4 translate-y-2 opacity-0 transition-all duration-200
-             rounded-xl bg-slate-900 px-3 py-2 text-sm text-white shadow-lg"
-    >
+             rounded-xl bg-slate-900 px-3 py-2 text-sm text-white shadow-lg">
       Copied gross price
     </div>
 
