--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="mt-6 grid gap-4 rounded-2xl bg-white p-5 shadow-sm ring-1 ring-slate-200">
 
         <!-- Inputs -->
-        <div class="grid gap-4 md:grid-cols-2">
+        <div class="grid grid-cols-2 gap-4">
           <label class="block">
             <div class="mb-1 text-sm font-medium">USD → GBP</div>
             <input
@@ -61,7 +61,7 @@
         </div>
 
         <!-- Results -->
-        <div class="mt-6 grid gap-4 md:grid-cols-2">
+        <div class="mt-6 grid grid-cols-2 gap-4">
 
           <label class="block">
             <div class="mb-1 text-sm font-medium">Rounded net cost (GBP)</div>
