--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body class="min-h-screen bg-slate-50 text-slate-900">
-    <div class="mx-auto max-w-3xl p-6">
-      <div class="grid gap-4 rounded-2xl bg-white p-5 shadow-sm ring-1 ring-slate-200">
+    <div class="mx-auto max-w-3xl">
+      <div class="grid gap-4 bg-white p-5 shadow-sm ring-1 ring-slate-200">
 
         <!-- Inputs -->
         <div class="grid grid-cols-2 gap-4">
