--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </label>
 
           <label class="block">
-            <div class="mb-1 text-sm font-medium">Cost price ($)</div>
+            <div class="mb-1 text-sm font-medium">Cost ($)</div>
             <input id="usdCost" type="number" step="0.01" value="1"
               class="w-full rounded-xl border border-slate-300 bg-white px-3 py-2 outline-none ring-blue-500 focus:ring-2" />
           </label>
@@ -39,7 +39,7 @@
         </div>
 
         <!-- Results -->
-        <div class="mt-6 grid grid-cols-2 gap-4">
+        <div class="grid grid-cols-2 gap-4">
 
           <label class="block">
             <div class="mb-1 text-sm font-medium">Net cost (£)</div>
